--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@stripe/stripe-js": "^1.46.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
+    "csv-parse": "^5.3.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "sequelize": "^6.25.3",
-    "stripe": "^11.6.0"
+    "stripe": "^11.6.0",
+    "victory": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
