--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "seed": "node script/seed.js",
-    "start": "node server",
-    "start:dev": "npm run build:dev & npm run start-server",
+    "start": "npm run build:dev & npm run start-server",
     "start:dev:logger": "LOGGING=true npm run start:dev",
     "start:dev:seed": "SEED=true npm run start:dev",
     "start-server": "JWT=shh nodemon server -e html,js,scss --ignore public --ignore client",
@@ -24,6 +23,7 @@
     "@stripe/stripe-js": "^1.46.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
+    "css-loader": "^6.7.3",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
@@ -31,6 +31,7 @@
     "pg": "^8.8.0",
     "sequelize": "^6.25.3",
     "stripe": "^11.6.0",
+    "style-loader": "^3.3.1",
     "victory": "^36.6.8"
   },
   "devDependencies": {
